lavfi/mergeplanes: Fix >8 bit for big endian formats and yuv4xxp16le.

Fixes part of ticket #5916.